whisperx/npu/npu_optimization/compilation_test_corrected.log
mlir_aie2_minimal_corrected.mlir:6:14: error: custom op 'aie.device' expected string or keyword containing one of the following enum values for attribute 'device' [xcvc1902, xcve2302, xcve2802, npu1, npu1_1col, npu1_2col, npu1_3col, npu1_4col, npu2]
  aie.device(npu) {
             ^
